# fastforge

./: README.md  fastforge.py  pyproject.toml
backend/: pyproject.toml
backend/fastforge_core/: __init__.py  background.py  events.py
backend/fastforge_core/auth/: __init__.py  jwt_service.py  middleware.py  password.py
backend/fastforge_core/base/: app_service.py  entities.py  permissions.py  repository.py
backend/fastforge_core/db/: alembic_utils.py  session.py
backend/fastforge_core/middleware/: audit.py  exceptions.py
backend/fastforge_core/modules/: __init__.py
backend/fastforge_core/modules/data_seeding/: __init__.py
backend/fastforge_core/modules/identity/: __init__.py  models.py  router.py  schemas.py  service.py
backend/fastforge_core/modules/tenant_management/: __init__.py  models.py  schemas.py  service.py
backend/fastforge_core/settings/: __init__.py  app_settings.py
cli/: __init__.py  cmd_init.py  field_mappings.py  gen_auth.py  gen_from_model.py  gen_hooks.py  gen_model_stub.py  gen_services.py  gen_types.py  generate_client.py  model_introspector.py  openapi_parser.py
