[project]
name = "fastforge-cli"
version = "0.3.0"
description = "FastForge CLI — full-stack framework for React + FastAPI"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
fastforge = "cli:main"

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["cli*"]
